--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,15 @@
 {
-  "name": "Чипсы, которые ты пробовал",
+  "name": "Коллекция Чипсов",
   "short_name": "Чипсы",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#f5f5f7",
-  "theme_color": "#007aff",
+  "background_color": "#ffffff",
+  "theme_color": "#007BFF",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
-
