--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,10 @@
   "theme_color": "#007BFF",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     }
   ]
 }
+
